# hummingbird

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.10.builder  Dockerfile.builder  Dockerfile.debug  README.md  appveyor.yml  build_docker_builder.bash  build_docker_debug.bash  docker-compose.yml  docker-entrypoint.sh  docker.md  index.html  swagger.yaml
cmake/dependencies/: CMakeLists.txt
cmake/dependencies_unix/: CMakeLists.txt
cmake/dependencies_win32/: CMakeLists.txt
cmake/downloads/: CMakeLists.txt
cmake/hummingbird_win32/: CMakeLists.txt
src/: CMakeLists.txt
src/hb_admin/: CMakeLists.txt  hb_admin.c  hb_admin.h
src/hb_archive/: CMakeLists.txt  hb_archive.c  hb_archive.h
src/hb_cache/: CMakeLists.txt  hb_cache.c  hb_cache.h
src/hb_config/: CMakeLists.txt  hb_config.c  hb_config.h
src/hb_contracts/: CMakeLists.txt  hb_contracts.c  hb_contracts.h
src/hb_db/: CMakeLists.txt  hb_db.c  hb_db.h
src/hb_economics/: CMakeLists.txt  hb_economics.c  hb_economics.h
src/hb_events/: CMakeLists.txt  hb_events.c  hb_events.h
src/hb_file/: CMakeLists.txt  hb_file.c  hb_file.h
src/hb_grid/: CMakeLists.txt  hb_grid.c  hb_grid.h  hb_grid_cmd.h  hb_grid_process_api.c  hb_grid_process_api.h  hb_grid_process_getleaderboard.c  hb_grid_process_getleaderboard.h  hb_grid_process_getleaderrank.c  hb_grid_process_getleaderrank.h  hb_grid_process_getmessageschannel.c  hb_grid_process_getmessageschannel.h  hb_grid_process_loginaccount.c  hb_grid_process_loginaccount.h  hb_grid_process_loginuser.c  hb_grid_process_loginuser.h  hb_grid_process_newaccount.c  hb_grid_process_newaccount.h  hb_grid_process_neweconomicsrecords.c  hb_grid_process_neweconomicsrecords.h  hb_grid_process_newmessageschannel.c  hb_grid_process_newmessageschannel.h  hb_grid_process_newproject.c  hb_grid_process_newproject.h  hb_grid_process_newuser.c  hb_grid_process_newuser.h  hb_grid_process_postmessageschannel.c  hb_grid_process_postmessageschannel.h  hb_grid_process_script_api.c  hb_grid_process_script_api.h  hb_grid_process_script_avatar.c  hb_grid_process_script_avatar.h  hb_grid_process_script_command.c  hb_grid_process_script_command.h  hb_grid_process_script_event.c  hb_grid_process_script_event.h  hb_grid_process_setleaderboard.c  hb_grid_process_setleaderboard.h  hb_grid_process_setleaderscore.c  hb_grid_process_setleaderscore.h  (+28 more)
src/hb_http/: CMakeLists.txt  hb_http.c  hb_http.h
src/hb_json/: CMakeLists.txt  hb_json.c  hb_json.h
src/hb_leaderboard/: CMakeLists.txt  hb_leaderboard.c  hb_leaderboard.h
src/hb_log/: CMakeLists.txt  hb_log.c  hb_log.h
src/hb_log_console/: CMakeLists.txt  hb_log_console.c  hb_log_console.h
src/hb_log_file/: CMakeLists.txt  hb_log_file.c  hb_log_file.h
src/hb_log_stderr/: CMakeLists.txt  hb_log_stderr.c  hb_log_stderr.h
src/hb_log_tcp/: CMakeLists.txt  hb_log_tcp.c  hb_log_tcp.h
src/hb_matching/: CMakeLists.txt  hb_matching.c  hb_matching.h
src/hb_memory/: CMakeLists.txt  hb_memory.c  hb_memory.h
src/hb_messages/: CMakeLists.txt  hb_messages.c  hb_messages.h
src/hb_mongo/: CMakeLists.txt  hb_mongo.c  hb_mongo.h
src/hb_mutex/: CMakeLists.txt  hb_mutex.h  hb_mutex_unix.c  hb_mutex_win32.c
src/hb_node/: CMakeLists.txt  hb_node.c  hb_node.h
src/hb_node_api/: CMakeLists.txt  hb_node_api.c  hb_node_api.h
src/hb_node_loginaccount/: CMakeLists.txt  hb_node_loginaccount.c  hb_node_loginaccount.h
src/hb_node_loginuser/: CMakeLists.txt  hb_node_loginuser.c  hb_node_loginuser.h
src/hb_node_main/: CMakeLists.txt  hb_node_main.c  hb_node_main.h
src/hb_node_newaccount/: CMakeLists.txt  hb_node_newaccount.c  hb_node_newaccount.h
src/hb_node_newproject/: CMakeLists.txt  hb_node_newproject.c  hb_node_newproject.h
src/hb_node_newuser/: CMakeLists.txt  hb_node_newuser.c  hb_node_newuser.h
src/hb_node_universe/: CMakeLists.txt  hb_node_universe.c  hb_node_universe.h
src/hb_node_upload/: CMakeLists.txt  hb_node_upload.c  hb_node_upload.h
src/hb_platform/: CMakeLists.txt  hb_platform_windows.h
src/hb_pool/: CMakeLists.txt  hb_pool.c  hb_pool.h
src/hb_process/: CMakeLists.txt  hb_process.c  hb_process.h  hb_process_unix.c  hb_process_win32.c
src/hb_script/: CMakeLists.txt  hb_script.c  hb_script.h  hb_script_compiler.c  hb_script_compiler.h  hb_script_handle.c  hb_script_handle.h  hb_script_handler.h  hb_script_json.c  hb_script_json.h  hb_script_server_CreateMatching.c  hb_script_server_CreateProjectEntity.c  hb_script_server_CreateUserEntity.c  hb_script_server_GetCurrentUserData.c  hb_script_server_GetCurrentUserPublicData.c  hb_script_server_GetProjectEntity.c  hb_script_server_GetProjectEntityPublicData.c  hb_script_server_GetProjectPublicData.c  hb_script_server_GetStatusMatching.c  hb_script_server_GetUserEntityPublicData.c  hb_script_server_GetWorldPublicData.c  hb_script_server_JoinMatching.c  hb_script_server_SelectProjectEntity.c  hb_script_server_SelectUserEntity.c  hb_script_server_SetAllowWorldTurn.c  hb_script_server_SetCurrentUserPublicData.c  hb_script_server_SetProjectEntityPublicData.c  hb_script_server_SetProjectPublicData.c  hb_script_server_SetUserEntityPublicData.c  hb_script_server_SetWorldPublicData.c  hb_script_server_UpdateCurrentUserPublicData.c  hb_script_server_UpdateProjectEntityPublicData.c  hb_script_server_UpdateProjectPublicData.c  hb_script_server_UpdateUserEntityPublicData.c  hb_script_server_UpdateWorldPublicData.c  hb_script_settings.h
src/hb_sharedmemory/: CMakeLists.txt  hb_sharedmemory.c  hb_sharedmemory.h  hb_sharedmemory_unix.c  hb_sharedmemory_win32.c
src/hb_storage/: CMakeLists.txt  hb_storage.c  hb_storage.h
src/hb_thread/: CMakeLists.txt  hb_thread.c  hb_thread.h  hb_thread_pthread.c  hb_thread_unix.c  hb_thread_win32.c
src/hb_token/: CMakeLists.txt  hb_token.c  hb_token.h
src/hb_utils/: CMakeLists.txt  hb_array.c  hb_array.h  hb_base16.c  hb_base16.h  hb_base64.c  hb_base64.h  hb_clock.c  hb_clock.h  hb_date.c  hb_date.h  hb_file.c  hb_file.h  hb_getenv.c  hb_getenv.h  hb_getopt.c  hb_getopt.h  hb_hashtable.c  hb_hashtable.h  hb_httpopt.c  hb_httpopt.h  hb_list.c  (+37 more)
(+30 files in other folders)
