cmake_minimum_required(VERSION 3.0)

set(HUMMINGBIRD_LZ4_INCLUDES "" CACHE STRING "HUMMINGBIRD_LZ4_INCLUDES")
set(HUMMINGBIRD_HIREDIS_INCLUDES "" CACHE STRING "HUMMINGBIRD_HIREDIS_INCLUDES")
set(HUMMINGBIRD_MONGOC_INCLUDES "" CACHE STRING "HUMMINGBIRD_MONGOC_INCLUDES")
set(HUMMINGBIRD_LIBEVENT_INCLUDES "" CACHE STRING "HUMMINGBIRD_LIBEVENT_INCLUDES")
set(HUMMINGBIRD_JANSSON_INCLUDES "" CACHE STRING "HUMMINGBIRD_JANSSON_INCLUDES")

if(POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()

PROJECT(hummingbird)

MACRO(HUMMINGBIRD_ADD_FILTER group_name)
    SOURCE_GROUP(${group_name} FILES ${ARGN})
    SET(HUMMINGBIRD_SOURCE_FILES ${HUMMINGBIRD_SOURCE_FILES} ${ARGN})
ENDMACRO()

MACRO(HUMMINGBIRD_ADD_LIBRARY)
    ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})
ENDMACRO()

MACRO(HUMMINGBIRD_ADD_INTERFACE)
    ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
    
    if(MSVC)
        add_custom_target(${PROJECT_NAME}.headers SOURCES ${HUMMINGBIRD_SOURCE_FILES})
    endif()
ENDMACRO()

ADD_SUBDIRECTORY(src)