cmake_minimum_required(VERSION 3.5)

if(POLICY CMP0025)
  cmake_policy(SET CMP0025 NEW)
endif ()

set(HUMMINGBIRD_LZ4_INCLUDES "" CACHE STRING "HUMMINGBIRD_LZ4_INCLUDES")
set(HUMMINGBIRD_HIREDIS_INCLUDES "" CACHE STRING "HUMMINGBIRD_HIREDIS_INCLUDES")
set(HUMMINGBIRD_MONGOC_INCLUDES "" CACHE STRING "HUMMINGBIRD_MONGOC_INCLUDES")
set(HUMMINGBIRD_LIBEVENT_INCLUDES "" CACHE STRING "HUMMINGBIRD_LIBEVENT_INCLUDES")
set(HUMMINGBIRD_JSON_INCLUDES "" CACHE STRING "HUMMINGBIRD_JSON_INCLUDES")

SET(HUMMINGBIRD_TARGET_UNIX OFF)
SET(HUMMINGBIRD_TARGET_ANDROID OFF)
SET(HUMMINGBIRD_TARGET_OSX OFF)
SET(HUMMINGBIRD_TARGET_MINGW OFF)
SET(HUMMINGBIRD_TARGET_WIN32 OFF)

if(UNIX AND NOT ANDROID AND NOT APPLE)
    SET(HUMMINGBIRD_TARGET_UNIX ON)
elseif(ANDROID)
    SET(HUMMINGBIRD_TARGET_ANDROID ON)
elseif(APPLE AND NOT IOS)
    SET(HUMMINGBIRD_TARGET_OSX ON)
elseif(MINGW)
    SET(HUMMINGBIRD_TARGET_MINGW ON)
elseif(WIN32)
    SET(HUMMINGBIRD_TARGET_WIN32 ON)
else()
    MESSAGE(FATAL_ERROR "unsuppot platform")
endif()

PROJECT(hummingbird)

MACRO(HUMMINGBIRD_ADD_FILTER group_name)
    SOURCE_GROUP(${group_name} FILES ${ARGN})
    SET(HUMMINGBIRD_SOURCE_FILES ${HUMMINGBIRD_SOURCE_FILES} ${ARGN})
ENDMACRO()

MACRO(HUMMINGBIRD_ADD_LIBRARY)
    ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})
    
    set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
ENDMACRO()

MACRO(HUMMINGBIRD_ADD_INTERFACE)
    ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
    
    if(MSVC)
        add_custom_target(${PROJECT_NAME}.headers SOURCES ${HUMMINGBIRD_SOURCE_FILES})
    endif()
    
    set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
ENDMACRO()

ADD_SUBDIRECTORY(src)