CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

ADD_SUBDIRECTORY(hb_config)
ADD_SUBDIRECTORY(hb_memory)
ADD_SUBDIRECTORY(hb_utils)
ADD_SUBDIRECTORY(hb_log)
ADD_SUBDIRECTORY(hb_log_file)
ADD_SUBDIRECTORY(hb_log_tcp)
ADD_SUBDIRECTORY(hb_thread)
ADD_SUBDIRECTORY(hb_mutex)
ADD_SUBDIRECTORY(hb_pool)
ADD_SUBDIRECTORY(hb_json)
ADD_SUBDIRECTORY(hb_cache)
ADD_SUBDIRECTORY(hb_db)
ADD_SUBDIRECTORY(hb_archive)
ADD_SUBDIRECTORY(hb_script)
ADD_SUBDIRECTORY(hb_token)
ADD_SUBDIRECTORY(hb_storage)
ADD_SUBDIRECTORY(hb_grid)
ADD_SUBDIRECTORY(hb_http)
ADD_SUBDIRECTORY(hb_matching)
ADD_SUBDIRECTORY(hb_leaderboard)
ADD_SUBDIRECTORY(hb_messages)
ADD_SUBDIRECTORY(hb_events)
ADD_SUBDIRECTORY(hb_contracts)

SET(HUMMINGBIRD_APPLICATION_LINK_LIBRARIES ${HUMMINGBIRD_APPLICATION_LINK_LIBRARIES} PARENT_SCOPE)
SET(HUMMINGBIRD_APPLICATION_DEPENDENCIES ${HUMMINGBIRD_APPLICATION_DEPENDENCIES} PARENT_SCOPE)