CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

include_directories(.)

ADD_SUBDIRECTORY(hb_config)
ADD_SUBDIRECTORY(hb_memory)
ADD_SUBDIRECTORY(hb_utils)
ADD_SUBDIRECTORY(hb_log)
ADD_SUBDIRECTORY(hb_log_console)
ADD_SUBDIRECTORY(hb_log_file)
ADD_SUBDIRECTORY(hb_log_tcp)
ADD_SUBDIRECTORY(hb_thread)
ADD_SUBDIRECTORY(hb_mutex)
ADD_SUBDIRECTORY(hb_pool)
ADD_SUBDIRECTORY(hb_json)
ADD_SUBDIRECTORY(hb_cache)
ADD_SUBDIRECTORY(hb_db)
ADD_SUBDIRECTORY(hb_archive)
ADD_SUBDIRECTORY(hb_token)
ADD_SUBDIRECTORY(hb_storage)
ADD_SUBDIRECTORY(hb_http)