CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

include_directories(.)

ADD_SUBDIRECTORY(hb_config)
ADD_SUBDIRECTORY(hb_memory)
ADD_SUBDIRECTORY(hb_utils)
ADD_SUBDIRECTORY(hb_log)
ADD_SUBDIRECTORY(hb_log_stderr)
ADD_SUBDIRECTORY(hb_log_file)
ADD_SUBDIRECTORY(hb_log_tcp)
ADD_SUBDIRECTORY(hb_thread)
ADD_SUBDIRECTORY(hb_mutex)
ADD_SUBDIRECTORY(hb_pool)

IF(HUMMINGBIRD_LIBRARY_JSON)
    ADD_SUBDIRECTORY(hb_json)
ENDIF()

IF(HUMMINGBIRD_LIBRARY_CACHE)
    ADD_SUBDIRECTORY(hb_cache)
    ADD_SUBDIRECTORY(hb_token)
ENDIF()

IF(HUMMINGBIRD_LIBRARY_DB)
    ADD_SUBDIRECTORY(hb_db)
ENDIF()

IF(HUMMINGBIRD_LIBRARY_ARCHIVE)
    ADD_SUBDIRECTORY(hb_archive)
ENDIF()

IF(HUMMINGBIRD_LIBRARY_STORAGE)
    ADD_SUBDIRECTORY(hb_storage)
ENDIF()

IF(HUMMINGBIRD_LIBRARY_HTTP)
    ADD_SUBDIRECTORY(hb_http)
ENDIF()