CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(HUMMINGBIRD_DEPENDENCE_MONGO "HUMMINGBIRD_DEPENDENCE_MONGO" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_LUA "HUMMINGBIRD_DEPENDENCE_LUA" ON)

PROJECT(dependencies)

if(HUMMINGBIRD_DEPENDENCE_MONGO)
    message("================mongo================")
    SET(ENABLE_TESTS OFF CACHE BOOL "ENABLE_TESTS" FORCE)
    SET(ENABLE_EXAMPLES OFF CACHE BOOL "ENABLE_EXAMPLES" FORCE)
    SET(ENABLE_MAINTAINER_FLAGS OFF CACHE BOOL "ENABLE_MAINTAINER_FLAGS" FORCE)
    SET(ENABLE_AUTOMATIC_INIT_AND_CLEANUP ON CACHE BOOL "ENABLE_AUTOMATIC_INIT_AND_CLEANUP" FORCE)
    SET(ENABLE_CRYPTO_SYSTEM_PROFILE OFF CACHE BOOL "ENABLE_CRYPTO_SYSTEM_PROFILE" FORCE)
    SET(ENABLE_TRACING OFF CACHE BOOL "ENABLE_TRACING" FORCE)
    SET(ENABLE_COVERAGE OFF CACHE BOOL "ENABLE_COVERAGE" FORCE)
    SET(ENABLE_MAN_PAGES OFF CACHE BOOL "ENABLE_MAN_PAGES" FORCE)
    SET(ENABLE_HTML_DOCS OFF CACHE BOOL "ENABLE_HTML_DOCS" FORCE)
    SET(ENABLE_EXTRA_ALIGNMENT ON CACHE BOOL "ENABLE_EXTRA_ALIGNMENT" FORCE)
    SET(ENABLE_RDTSCP OFF CACHE BOOL "ENABLE_RDTSCP" FORCE)
    SET(ENABLE_APPLE_FRAMEWORK OFF CACHE BOOL "ENABLE_APPLE_FRAMEWORK" FORCE)
    SET(ENABLE_UNINSTALL OFF CACHE BOOL "ENABLE_UNINSTALL" FORCE)
    
    SET(ENABLE_STATIC ON CACHE BOOL "Build static libmongoc. Set to ON/AUTO/OFF, default AUTO." FORCE)
        
    ADD_SUBDIRECTORY(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/mongo ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo)
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libmongoc/src/mongoc/mongoc-config.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/mongoc/mongoc-config.h"
        COPYONLY
    )    
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libmongoc/src/mongoc/mongoc-version.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/mongoc/mongoc-version.h"
        COPYONLY
    )    
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libbson/src/bson/bson-config.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/bson/bson-config.h"
        COPYONLY
    )
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libbson/src/bson/bson-version.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/bson/bson-version.h"
        COPYONLY
    )
endif()

if(HUMMINGBIRD_DEPENDENCE_LUA)
    message("================lua================")
    
    ADD_SUBDIRECTORY(lua)
endif()