CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(HUMMINGBIRD_DEPENDENCE_MONGO "HUMMINGBIRD_DEPENDENCE_MONGO" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_LUA "HUMMINGBIRD_DEPENDENCE_LUA" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_LZ4 "HUMMINGBIRD_DEPENDENCE_LZ4" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_LIBEVENT "HUMMINGBIRD_DEPENDENCE_LIBEVENT" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_JANSSON "HUMMINGBIRD_DEPENDENCE_LIBEVENT" ON)
OPTION(HUMMINGBIRD_DEPENDENCE_HIREDIS "HUMMINGBIRD_DEPENDENCE_HIREDIS" ON)

PROJECT(dependencies)

#dependencies jansson
if(HUMMINGBIRD_DEPENDENCE_JANSSON)
    message("================jansson================")
    
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_STATIC_CRT ON CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)    
    set(JANSSON_INSTALL OFF CACHE BOOL "JANSSON_INSTALL" FORCE)    

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/jansson.h ${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/jansson/include/jansson.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/jansson_config.h ${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/jansson/include/jansson_config.h COPYONLY)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/CMakeLists.txt ${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/jansson/CMakeLists.txt COPYONLY)

    ADD_SUBDIRECTORY(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/jansson ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/jansson)
endif()

#dependencies libevent
if(HUMMINGBIRD_DEPENDENCE_LIBEVENT)
    message("================libevent================")
    
    SET(EVENT__LIBRARY_TYPE STATIC CACHE STRING "EVENT__LIBRARY_TYPE" FORCE)
    SET(EVENT__DISABLE_OPENSSL ON CACHE BOOL "EVENT__DISABLE_OPENSSL" FORCE)
    SET(EVENT__DISABLE_BENCHMARK ON CACHE BOOL "EVENT__DISABLE_BENCHMARK" FORCE)
    SET(EVENT__DISABLE_TESTS ON CACHE BOOL "EVENT__DISABLE_TESTS" FORCE)
    SET(EVENT__DISABLE_REGRESS ON CACHE BOOL "EVENT__DISABLE_REGRESS" FORCE)
    SET(EVENT__DISABLE_SAMPLES ON CACHE BOOL "EVENT__DISABLE_SAMPLES" FORCE)
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libevent/CMakeLists.txt ${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/libevent/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/libevent ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/libevent)
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/libevent/include/event2/event-config.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/libevent/install/event2/event-config.h"
        COPYONLY
    )    
endif()

#dependencies mongo
if(HUMMINGBIRD_DEPENDENCE_MONGO)
    message("================mongo================")
    
    SET(ENABLE_TESTS OFF CACHE BOOL "ENABLE_TESTS" FORCE)
    SET(ENABLE_EXAMPLES OFF CACHE BOOL "ENABLE_EXAMPLES" FORCE)
    SET(ENABLE_MAINTAINER_FLAGS OFF CACHE BOOL "ENABLE_MAINTAINER_FLAGS" FORCE)
    SET(ENABLE_AUTOMATIC_INIT_AND_CLEANUP ON CACHE BOOL "ENABLE_AUTOMATIC_INIT_AND_CLEANUP" FORCE)
    SET(ENABLE_CRYPTO_SYSTEM_PROFILE OFF CACHE BOOL "ENABLE_CRYPTO_SYSTEM_PROFILE" FORCE)
    SET(ENABLE_TRACING OFF CACHE BOOL "ENABLE_TRACING" FORCE)
    SET(ENABLE_COVERAGE OFF CACHE BOOL "ENABLE_COVERAGE" FORCE)
    SET(ENABLE_MAN_PAGES OFF CACHE BOOL "ENABLE_MAN_PAGES" FORCE)
    SET(ENABLE_HTML_DOCS OFF CACHE BOOL "ENABLE_HTML_DOCS" FORCE)
    SET(ENABLE_EXTRA_ALIGNMENT ON CACHE BOOL "ENABLE_EXTRA_ALIGNMENT" FORCE)
    SET(ENABLE_RDTSCP OFF CACHE BOOL "ENABLE_RDTSCP" FORCE)
    SET(ENABLE_APPLE_FRAMEWORK OFF CACHE BOOL "ENABLE_APPLE_FRAMEWORK" FORCE)
    SET(ENABLE_UNINSTALL OFF CACHE BOOL "ENABLE_UNINSTALL" FORCE)
    SET(ENABLE_SSL OFF CACHE BOOL "ENABLE_SSL" FORCE)
    SET(ENABLE_SASL OFF CACHE BOOL "ENABLE_SASL" FORCE)
    
    SET(ENABLE_STATIC ON CACHE BOOL "Build static libmongoc. Set to ON/AUTO/OFF, default AUTO." FORCE)
        
    ADD_SUBDIRECTORY(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/mongo ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo)
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libmongoc/src/mongoc/mongoc-config.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/mongoc/mongoc-config.h"
        COPYONLY
    )    
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libmongoc/src/mongoc/mongoc-version.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/mongoc/mongoc-version.h"
        COPYONLY
    )    
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libbson/src/bson/bson-config.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/bson/bson-config.h"
        COPYONLY
    )
    
    configure_file(
        "${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/mongo/src/libbson/src/bson/bson-version.h"
        "${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install/bson/bson-version.h"
        COPYONLY
    )
endif()

#dependencies hiredis
if(HUMMINGBIRD_DEPENDENCE_HIREDIS)
    message("================hiredis================")
    
    SET(ENABLE_SSL OFF CACHE BOOL "ENABLE_SSL" FORCE)
    SET(DISABLE_TESTS ON CACHE BOOL "DISABLE_TESTS" FORCE)
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/hiredis/CMakeLists.txt ${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/hiredis/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/hiredis ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY}/hiredis)
endif()

#dependencies lua
if(HUMMINGBIRD_DEPENDENCE_LUA)
    message("================lua================")
    
    ADD_SUBDIRECTORY(lua)
endif()

#dependencies lz4
if(HUMMINGBIRD_DEPENDENCE_LZ4)
    message("================lz4================")
    
    ADD_SUBDIRECTORY(lz4)
endif()