CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(dependencies_unix)

INCLUDE(../base_template.cmake)
INCLUDE(../unix_template.cmake)

SET(HUMMINGBIRD_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
SET(HUMMINGBIRD_DEPENDENCIES_DIRECTORY ${HUMMINGBIRD_REPOSITORY}/dependencies)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY})

SET(HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY ${CMAKE_BINARY_DIR}/dependencies)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../dependencies ${HUMMINGBIRD_DEPENDENCIES_TEMP_DIRECTORY})