PROJECT(hb_cache LANGUAGES C)

HUMMINGBIRD_ADD_FILTER(
src
	hb_cache.h
	hb_cache.c
)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_HIREDIS_INCLUDES})

HUMMINGBIRD_ADD_LIBRARY()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)