PROJECT(hb_db C)

ADD_FILTER(
src
	hb_db.h
	hb_db.c
)

ADD_DEFINITIONS(-DMONGOC_STATIC)
ADD_DEFINITIONS(-DBSON_STATIC)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/mongo/install)
INCLUDE_DIRECTORIES(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/mongo/src/libbson/src)
INCLUDE_DIRECTORIES(${HUMMINGBIRD_DEPENDENCIES_SOURCE_DIRECTORY}/mongo/src/libmongoc/src)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${HUMMINGBIRD_SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}mongoc-static-1.0${CMAKE_STATIC_LIBRARY_SUFFIX})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${HUMMINGBIRD_DEPENDENCIES_LIBRARY_DIRECTORY}/${CMAKE_STATIC_LIBRARY_PREFIX}bson-static-1.0${CMAKE_STATIC_LIBRARY_SUFFIX})

if(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Ws2_32.lib)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Crypt32.lib)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Bcrypt.lib)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Secur32.lib)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} Dnsapi.lib)
ELSEIF(UNIX AND NOT ANDROID)    
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} resolv)
endif()

