PROJECT(hb_db LANGUAGES C)

HUMMINGBIRD_ADD_FILTER(
src
    hb_db.h
    hb_db.c
)

ADD_DEFINITIONS(-DMONGOC_STATIC)
ADD_DEFINITIONS(-DBSON_STATIC)

INCLUDE_DIRECTORIES(${HUMMINGBIRD_MONGOC_INCLUDES})

HUMMINGBIRD_ADD_LIBRARY()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_config)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_utils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} hb_log)